Added chatbot feature

--- a/web-app/template/index.html
+++ b/web-app/template/index.html
@@ -231,6 +231,53 @@
 			</div>
 		</section>
 		<!-- ========================= Working-section end ========================= -->
+		<section id="about" class="about-section pt-150">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-6">
+						<div class="about-img wow fadeInUp" data-wow-delay=".5s">
+							<img src="../static/assets/img/about/chat_bot.png" width="100" height="700" alt="">
+						</div>
+					</div>
+					<div class="col-lg-6">
+						<div class="about-content">
+							<div class="section-title"><br>	
+								<h1 class="wow fadeInUp" data-wow-delay=".4s">Your Health Companion: Disease Detection and Prevention Chatbot</h1>
+								<p class="wow fadeInUp" data-wow-delay=".6s">
+									Introducing our intelligent health companion—a chatbot designed to empower you with instant disease detection and personalized prevention advice. Simply share your symptoms, and our AI-driven assistant will analyze your input to provide you with accurate insights into potential health conditions. Not only does it help you understand what you might be experiencing, but it also offers practical prevention strategies tailored to your needs. With this innovative tool at your fingertips, you can take proactive steps towards better health, ensuring you stay informed and empowered on your wellness journey.
+									</p>
+									<a href="/chatbot" rel="nofollow" class="main-btn btn-hover wow fadeInUp" data-wow-delay=".6s">Checkout the Bot Now</a>
+							</div>
+							<!-- <div class="rating-meta d-flex align-items-center wow fadeInUp" data-wow-delay=".65s">
+								<h5>Rating 4.8</h5>
+								<div class="rating">
+									<i class="lni lni-star-filled"></i>
+									<i class="lni lni-star-filled"></i>
+									<i class="lni lni-star-filled"></i>
+									<i class="lni lni-star-filled"></i>
+									<i class="lni lni-star-filled"></i>
+								</div>
+							</div>
+
+							<div class="counter-up wow fadeInUp" data-wow-delay=".8s">
+								<div class="single-counter">
+									<h3 id="secondo1" class="countup" cup-end="1" cup-append="M+">1 </h3>
+									<h5>Download</h5>
+								</div>
+								<div class="single-counter position-relative">
+									<h3 id="secondo2" class="countup" cup-end="234" cup-append="K+">234 </h3>
+									<h5>Happy User</h5>
+								</div>
+								<div class="single-counter">
+									<h3 id="secondo3" class="countup" cup-end="34" cup-append="K+">34 </h3>
+									<h5>Reviews</h5>
+								</div>
+							</div> -->
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		
 		<!-- ========================= FAQ-section start ========================= -->
 		<section id="faq" class="testimonial-section img-bg pt-150 pb-40">
@@ -239,6 +286,7 @@
 					<div class="col-lg-6">
 						<div class="section-title mb-60 text-center">
 							<h1 class="wow fadeInUp" data-wow-delay=".4s">FAQ's <br> Under Development</h1>
+							
 						</div>
 					</div>
 				</div>
